# wnacg-downloader

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  run.bat
.github/workflows/: build.yml
src/: main.py
src/core/: config.py  crawler.py  db.py  downloader.py  logger.py  models.py  updater.py
src/ui/: main_window.py
src/ui/components/: comic_card.py  cover_manager.py  selectable_container.py
src/ui/views/: download_interface.py  home_interface.py  setting_interface.py
tests/: test_curl.py  test_domains.py  test_fetch.py  test_publish_page.py
