[project]
name = "wnacg-downloader"
version = "0.1.0"
description = "A modern comic download manager"
authors = [
    { name = "boo-yuan" }
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Fluent-Widgets>=1.6.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.15.0",
    "loguru>=0.7.3",
    "curl-cffi>=0.15.0",
    "pillow>=12.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
